--- a/.github/workflows/ui.yml
+++ b/.github/workflows/ui.yml
@@ -13,7 +13,7 @@ env:
   ECR_REPOSITORY: parimutuel-ui
   ECS_TASK_DEFINITION: parimutuel-ui-prod.aws-ecs-task-definition.json
   ECS_CLUSTER: parimutuel-services
-  ECS_SERVICE: parimutuel-ui
+  ECS_SERVICE: parimutuel-ui-prod
   CONTAINER_NAME: parimutuel-ui
   NODE_VERSION: 14
 
